Fixed the css so it doesn't bunch upon smaller resolutions, but I still need to fix an issue with the sidebars.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,119 +11,41 @@
  *= require_self
  *= require_tree .
  */
+html
+{
+    width: 100%;
+    height: 100%;
+}
 
 body
 {
+    height:100%;
+	width:100%;
     background-color:#E6E1CD;
     padding: 0px;
     margin: 0px;
     font-family:Helvetica ;
-    height:100%;
+	min-width:540px;	
+	display:inline-block;
+	overflow: scroll;
 }
-
-/* header jazz*/
-#header
-{
-    width:100%;
-    height:46px;
-    margin:auto;   
-    background-color:#002000;
-    border-bottom: 2px solid #968543;
-	position:fixed;
-	z-index:100;
-}
-
-#header ul
-{
-   list-style-type: none; 
-   margin:auto;
-   padding:0px;
-   padding-top:12px;
-   text-align: center;
-}
-
-#header ul li
-{
-    display: inline;
-    border-right: 1px solid #968543;
-    border-left: 1px solid #968543;
-
-}
-
-#header ul li#blog
-{
-    border-right: 0px;
-}
-#header ul li#home
-{
-    border-left: 0px;
-}
-#header ul li a
-{
-    text-decoration: none; 
-    padding: 10px 42px;
-    font-family:"helvetica";
-    font-size:20px;
-    
-    
-    color:#968543;
-}
-
-#header ul li a:hover
-{
-    background-color:#968543;
-    color:#ADAA9E;
-    
-}
-
-#header ul li a:active
-{
-    background-color:#F3F0E4;
-    color:#968543;
-   
-}
-
-/* Generic links*/
-a
-{
-    text-decoration: none; 
-    color:#968543;
-}
-
-
-
-a:active
-{
-    background-color:#F3F0E4;
-    color:#968543;
-    
-}
-
-a:hover
-{
-    background-color:#968543;
-    color:#ADAA9E;
-    
-}
-
-a:visited 
-{
-    text-decoration: none;
-}
-
 
 /* content jazz*/
-.content
+
+#content_area
 {
-    position:absolute;
-    left:0px;
-    top:46px;
+	min-width:540px;
+	width:100%;
+	height:100%;
+	display:inline-block;
+
 }
 
 #mainBody
 {
-    width:60%;  
-    left:20%;
+	width:60%;
+	min-width:324px;
+	float:left;
 }
 
 div.entry
@@ -134,17 +56,14 @@ div.entry
 	float:left;
 	min-width:300px;
 	min-height:335px;
-
 }
 div.entryHeader
 {
     margin-bottom:5px;   
-	}
-
+}
 
 div.title
 {
-
     font-size:25px;
 }
 
@@ -157,33 +76,24 @@ div.details
 
 .sidebar
 {
-	
-	height:100%;
-	position:fixed;
-	background-color:#beb17f
+	width:20%;
+	min-width:108px;
+	min-height:100%;
+	float:left;
+	position:relative;	
+	background-color:#beb17f;
+	outline: 1px solid #968543;
 
 }
-#leftSidebar
-{   
-    border-right: 1px solid #968543;
-    width:19%;
-    left: 0%;
-}
 
-
-#rightSidebar
-{
-    border-left: 1px solid #968543;
-    width:19%;
-    left:81%;
-}
 
 div#footer
 {
     text-align:center;
     height:100%;
     width:100%;
-    margin-top:20px;float:right;
+    margin-top:20px;
+	float:left;
 }
 
 .image
@@ -210,7 +120,6 @@ img#main_image
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
-
     max-width:90%;
     max-height:80%;
     width:auto;
@@ -223,3 +132,86 @@ img#main_image
 }
 
 
+/* header jazz*/
+#header
+{
+    width:100%;
+	min-width:540px;	
+    height:46px;
+    margin:auto;   
+    background-color:#002000;
+    border-bottom: 2px solid #968543;
+	position:sticky;
+	z-index:100;
+}
+
+#header ul
+{
+   list-style-type: none; 
+   margin:auto;
+   padding:0px;
+   padding-top:12px;
+   text-align: center;
+}
+
+#header ul li
+{
+    display: inline;
+    border-right: 1px solid #968543;
+    border-left: 1px solid #968543;
+}
+
+#header ul li#blog
+{
+    border-right: 0px;
+}
+#header ul li#home
+{
+    border-left: 0px;
+}
+
+#header ul li a
+{
+    text-decoration: none; 
+    padding: 10px 42px;
+    font-family:"helvetica";
+    font-size:20px; 
+    color:#968543;
+}
+
+#header ul li a:hover
+{
+    color:#ADAA9E;    
+}
+
+#header ul li a:active
+{
+    background-color:#F3F0E4;
+    color:#968543;
+   
+}
+
+/* Generic links*/
+a
+{
+    text-decoration: none; 
+    color:#968543;
+}
+
+a:active
+{
+    background-color:#F3F0E4;
+    color:#968543;
+    
+}
+
+a:hover
+{
+    background-color:#968543;
+    color:#ADAA9E;
+}
+
+a:visited 
+{
+    text-decoration: none;
+}
